--- a/templates/yandexmetric.html
+++ b/templates/yandexmetric.html
@@ -1,11 +1,7 @@
-<div class="metric">
-<!--LiveInternet counter-->
+<div class="metrix">
 <a href="https://www.liveinternet.ru/click"
 target="_blank">
 <img id="licntDB6A" width="88" height="15" style="border:0" title="LiveInternet: number of visitors for today is shown" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7" alt=""/>
 </a>
-<script>
-(function(d,s){d.getElementById("licntDB6A").src="https://counter.yadro.ru/hit?t23.6;r"+escape(d.referrer)+((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+(s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+";h"+escape(d.title.substring(0,150))+";"+Math.random()})(document,screen)
-</script>
-<!--/LiveInternet-->
+{% metrix %}
 </div>
